vpn-tgw/subnet.tf



resource "aws_subnet" "woznet_subnet_public_1a" {
  vpc_id = aws_vpc.woznet_vpc1.id
  cidr_block = "10.0.128.0/24"
  availability_zone = "us-east-1a"

  map_public_ip_on_launch = "true"

  tags = {
    Name = "woznet-subnet-public-1a"
  }
}

resource "aws_subnet" "woznet_subnet_public_1b" {
  vpc_id = aws_vpc.woznet_vpc1.id
  cidr_block = "10.0.129.0/24"
  availability_zone = "us-east-1b"

  map_public_ip_on_launch = "true" 

  tags = {
    Name = "woznet-subnet-public-1b"
  }
}

resource "aws_subnet" "woznet_subnet_private_1a" {
  vpc_id = aws_vpc.woznet_vpc1.id
  cidr_block = "10.0.130.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = "false"

  tags = {
    Name = "woznet-subnet-private-1a"
  }
}

resource "aws_subnet" "woznet_subnet_private_1b" {
  vpc_id = aws_vpc.woznet_vpc1.id
  cidr_block = "10.0.131.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = "false"

  tags = {
    Name = "woznet-subnet-private-1b"
  }
}

resource "aws_subnet" "woznet2_subnet_private_1a" {
  vpc_id = aws_vpc.woznet_vpc2.id
  cidr_block = "10.0.132.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = "false"

  tags = {
    Name = "woznet2-subnet-private-1a"
  }
}

resource "aws_subnet" "woznet2_subnet_private_1b" {
  vpc_id = aws_vpc.woznet_vpc2.id
  cidr_block = "10.0.133.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = "false"

  tags = {
    Name = "woznet2-subnet-private-1b"
  }
}
